feat: allow backdated sales
